@@ -60,16 +60,21 @@
 ;; TODO:: replace-program and the saving/storing of lfun closure values.
 ;; TODO:: Is this desirable anyway?
               
-(Project-Version lpmud 3-3 589)
-(Parent-Version lpmud 3-3 588)
+(Project-Version lpmud 3-3 590)
+(Parent-Version lpmud 3-3 589)
 (Version-Log "
-  - (prolang.y) Removed a C99 construct which broke compilation on C90
-      compilers. I hope. (Bug #0000116).
+  - (prolang.y) The move of the PREPARE_INSERT() in the last patch caused
+      the driver to generate faulty bytecode.
+  - (prolang.y) Function definitions didn't count the reference for the
+      returntype, which lead to memory corruption/crashes when handling
+      struct returntypes. Unfortunately now we have a memory leak
+      when structs are used as returntypes - there is something to be said for
+      using C++...  (reported by Bardioc).
 ")
 (New-Version-Log 
 ""
 )
-(Checkin-Time "Mon, 23 Aug 2004 20:51:49 -0600")
+(Checkin-Time "Mon, 30 Aug 2004 23:21:08 -0600")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -107,7 +112,7 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.11 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.79 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.652 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.653 644))
   (HISTORY (lpmud/f/49_HISTORY 1.373 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.20 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -328,7 +333,7 @@
   (src/port.h (lpmud/38_port.h 1.30.1.4.1.20 644))
   (src/port.c (lpmud/39_port.c 1.17.1.9 644))
   (src/prolang.h (lpmud/f/19_prolang.h 1.17.1.4 644))
-  (src/prolang.y (lpmud/37_prolang.y 1.65.1.84.1.65.1.68 644))
+  (src/prolang.y (lpmud/37_prolang.y 1.65.1.84.1.65.1.69 644))
   (src/ptrtable.h (lpmud/m/26_ptrtable.h 1.4 644))
   (src/ptrtable.c (lpmud/m/27_ptrtable.c 1.7.1.2 644))
   (src/random.h (lpmud/f/18_random.h 1.3 644))
